Updated slpr2 p8 (p10) data

--- a/contests/slpr2/p10/.vscode/settings.json
+++ b/contests/slpr2/p10/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "*.sass": "scss",
-        "cmath": "cpp"
+        "cmath": "cpp",
+        "vector": "cpp"
     }
 }
